src/test/ui/cannot-mutate-captured-non-mut-var.ast.stderr
error[E0594]: cannot assign to immutable captured outer variable in an `FnOnce` closure `x`
  --> $DIR/cannot-mutate-captured-non-mut-var.rs:13:25
   |
LL |     to_fn_once(move|| { x = 2; });
   |                         ^^^^^

error[E0596]: cannot borrow immutable captured outer variable in an `FnOnce` closure `s` as mutable
  --> $DIR/cannot-mutate-captured-non-mut-var.rs:18:25
   |
LL |     to_fn_once(move|| { s.read_to_end(&mut Vec::new()); });
   |                         ^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0596`.
